--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
