--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5",
     "sort-by": "^0.0.2",
