Fix darak mode issues

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.12.3"
+    "sweetalert2": "^11.12.3",
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
